# watch-docs

./: .gitignore  PROJECT_OUTLINE.md  README.md  pyproject.toml  requirements.txt
src/docwatch/: __init__.py  analyzer.py  cli.py  constants.py  coverage.py  extractor.py  graph.py  matcher.py  models.py  readers.py  scanner.py  scorer.py  serializer.py
src/docwatch/extractors/: __init__.py  asciidoc_extractor.py  js_extractor.py  markdown_extractor.py  notebook_extractor.py  patterns.py  python_ast.py  python_extractor.py  rst_extractor.py
src/docwatch/git/: __init__.py  commands.py  context.py  impact.py  tracker.py
tests/: __init__.py  test_analyzer.py  test_edge_cases.py  test_extractors.py  test_models.py
tests/git/: test_commands.py  test_tracker.py
